MaterialVisual/deploy/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devman
  labels:
    name: devman
